<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pwd_manager"
            android:icon="@drawable/pwd_manager"
            android:title="@string/menu_pwd_manager" />
        <item
            android:id="@+id/nav_pwd_generator"
            android:icon="@drawable/pwd_generator"
            android:title="@string/menu_pwd_generator" />
        <item
            android:id="@+id/nav_user_update"
            android:icon="@drawable/user_update"
            android:title="@string/menu_user_update" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_config"
            android:title="@string/menu_config" />

    </group>
</menu>
